# llama-agent

./: .env.example  .gitignore  GEMINI.md  LICENSE  README.md  agent.py  main.py  pyproject.toml  requirements.txt  themes.py  tools.py  utils.py
.github/: copilot-instructions.md
llama_agent/: __init__.py  agent.py  main.py  skills.py  tools.py
